Geometry disappearing when using simulation zone #111978

Closed
opened 2023-09-05 15:47:19 +02:00 by MKRelax · 7 comments

System Information
Operating system: Windows 10
Graphics card: NVidia RTX 3080Ti

Blender Version
Broken: 3.6.2 and also blender-3.6.3-candidate+v36.2fc04eaf4310-windows.amd64-release
Worked: blender-4.0.0-alpha+main.9f8d062de4e6-windows.amd64-release

Geometry randomly dissappears when using a Simulation Zone (even when empty).
This bug is present in 3.6.3 but is seems to have been fixed in 4.0. It would be great if that fix could be backported to 3.6, although it seems to be part of bigger changes.

Exact steps for others to reproduce the error

  1. Use default cube (or a plane or loose vertices).
  2. Add Geometry Nodes with only an empty Simulation Zone in it.
  3. Set end_frame to 100000 and scrub through the timeline.
  4. The geometry disappears after some scrubbing over longer distances (like 1000 or 500 frames).
  5. Turning off Simulation Nodes -> Cache seems to worsen the problem.
**System Information** Operating system: Windows 10 Graphics card: NVidia RTX 3080Ti **Blender Version** Broken: 3.6.2 and also blender-3.6.3-candidate+v36.2fc04eaf4310-windows.amd64-release Worked: blender-4.0.0-alpha+main.9f8d062de4e6-windows.amd64-release Geometry randomly dissappears when using a Simulation Zone (even when empty). This bug is present in 3.6.3 but is seems to have been fixed in 4.0. It would be great if that fix could be backported to 3.6, although it seems to be part of bigger changes. **Exact steps for others to reproduce the error** 1. Use default cube (or a plane or loose vertices). 2. Add Geometry Nodes with only an empty Simulation Zone in it. 3. Set end_frame to 100000 and scrub through the timeline. 4. The geometry disappears after some scrubbing over longer distances (like 1000 or 500 frames). 5. Turning off Simulation Nodes -> Cache seems to worsen the problem.
MKRelax added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-05 15:47:20 +02:00
Author

Demo video. This happens when scrubbing the timeline, but also during normal viewport playback, especially in heavy scenes (probably due to skipping frames). When the same Node setup is repeated in the scene, they tend to break at the same frame, but not always (as shown).
Since clearing the cache makes the problem disappear (only to re-appear at a different frame), this is probably a caching problem. As said, this seems to have been solved in 4.0, I'm hoping to backport this to 3.6.

Demo video. This happens when scrubbing the timeline, but also during normal viewport playback, especially in heavy scenes (probably due to skipping frames). When the same Node setup is repeated in the scene, they tend to break at the same frame, but not always (as shown). Since clearing the cache makes the problem disappear (only to re-appear at a different frame), this is probably a caching problem. As said, this seems to have been solved in 4.0, I'm hoping to backport this to 3.6.

Implementation of the Simulation Nodes is radically different in 4.0 and 3.6, so this was not a separate fix, but a radical rework. I do not think that such a point fix via backport is possible.

Implementation of the Simulation Nodes is radically different in 4.0 and 3.6, so this was not a separate fix, but a radical rework. I do not think that such a point fix via backport is possible.
Iliya Katushenock added the
Interest
Geometry Nodes
Interest
Nodes & Physics
labels 2023-09-05 19:50:27 +02:00
Member

Hi, thanks for the report. I can confirm.
Should work in 3.6. I'll bisect to ensure the resolving commit.

Hi, thanks for the report. I can confirm. Should work in 3.6. I'll bisect to ensure the resolving commit.
Pratik Borhade added this to the 3.6 LTS milestone 2023-09-06 04:44:33 +02:00
Author

Thank you @PratikPB2123 for adding this to the 3.6 LTS milestone!
To save you time, I have disected myself and found that this commit fixed it for 4.0:

81096abe2a3929c5e02e8d8c697a9571079fe0ef is the first new commit
commit 81096abe2a3929c5e02e8d8c697a9571079fe0ef
Author: Jacques Lucke <jacques@blender.org>
Date:   Fri Aug 4 19:34:35 2023 +0200

    Fix: simulation outputs empty geometry when going to frame zero

    Previously, simulation nodes would output default values when there is no
    current simulation state and nothing should be computed. Now, the data is
    just passed through which is usually less confusing.

    Pull Request: https://projects.blender.org/blender/blender/pulls/110800

 .../geometry/nodes/node_geo_simulation_input.cc    | 44 ++++++++++++----------
 .../geometry/nodes/node_geo_simulation_output.cc   | 24 ++++++++++--
 2 files changed, 45 insertions(+), 23 deletions(-)

I'm not a C++ developer and have not tried to backport this to 3.6 branch yet, but it seems doable at first glance.

It would be great to backport/reimplement this for 3.6 since that is an LTS version and this bug potentially impacts many, if not all, simulation node setups. Thanks again.

Thank you @PratikPB2123 for adding this to the 3.6 LTS milestone! To save you time, I have disected myself and found that this commit fixed it for 4.0: ``` 81096abe2a3929c5e02e8d8c697a9571079fe0ef is the first new commit commit 81096abe2a3929c5e02e8d8c697a9571079fe0ef Author: Jacques Lucke <jacques@blender.org> Date: Fri Aug 4 19:34:35 2023 +0200 Fix: simulation outputs empty geometry when going to frame zero Previously, simulation nodes would output default values when there is no current simulation state and nothing should be computed. Now, the data is just passed through which is usually less confusing. Pull Request: https://projects.blender.org/blender/blender/pulls/110800 .../geometry/nodes/node_geo_simulation_input.cc | 44 ++++++++++++---------- .../geometry/nodes/node_geo_simulation_output.cc | 24 ++++++++++-- 2 files changed, 45 insertions(+), 23 deletions(-) ``` I'm not a C++ developer and have not tried to backport this to 3.6 branch yet, but it seems doable at first glance. It would be great to backport/reimplement this for 3.6 since that is an LTS version and this bug potentially impacts many, if not all, simulation node setups. Thanks again.
Member

Thanks @MKRelax :D

@JacquesLucke , can we backport your commit to 3.6? It haven't introduced any new bug yet (no references at least)

Thanks @MKRelax :D @JacquesLucke , can we backport your commit to 3.6? It haven't introduced any new bug yet (no references at least)
Author

I honestly didn't know the difference between a "pointer" and a "reference" until today and I don't have a clue what the code does, but I managed to backport this to 3.6. Solves it for me, but needs a code review (preferably from @JacquesLucke) before merging.

After applying this patch I still ran into (similar) problems in 3.6. But they turn out to be present in 4.0 as well and were not introduced by the commit that was backported. See #112094.

I honestly didn't know the difference between a "pointer" and a "reference" until today and I don't have a clue what the code does, but I managed to backport this to 3.6. Solves it for me, but needs a code review (preferably from @JacquesLucke) before merging. After applying this patch I still ran into (similar) problems in 3.6. But they turn out to be present in 4.0 as well and were not introduced by the commit that was backported. See #112094.
Author

Commit e55ca270e2 (to repair a failed assertion in 3.6) also fixes this. There is no more need to backport the 4.0 commit.

Commit https://projects.blender.org/blender/blender/commit/e55ca270e2c37ebbfd09858ba9ec36e9a5361b37 (to repair a failed assertion in 3.6) also fixes this. There is no more need to backport the 4.0 commit.
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-09-15 10:20:31 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111978
No description provided.