Fix #111978: Passthrough if there is no simulation state (backport to 3.6)